--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <source src="./assets/song/PokemonRubyMainTheme.mp3" type="audio/mp3">
         Tu navegador no soporta la reproducción de audio.
     </audio>
+    <div class="animation-container">
+        <div class="rectangle"></div>
+        <div class="rectanglev2"></div>
+        <div class="rectangle"></div>
+        <div class="rectanglev2"></div>
+        <div class="rectangle"></div>
+        <div class="rectanglev2"></div>
+        <div class="rectangle"></div>         
 </div>
     <script src="./javascript/script.js"></script>
 </body>
