--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -18,7 +18,7 @@
       <nav class="nav" id="nav">
         <button class="close-menu" id="close">Close</button>
         <ul class="nav-list">
-        <li><a href="#"></a>Pokeballs</li>
+        <li><a href="https://www.google.com"></a>Pokeballs</li>
         <li><a href="#"></a>Form</li>
       </ul>
     </nav>
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="profile">
-          <img class="blastoise-img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/009.png" alt="">
+          <img class="blastoise-img" src="/assets/img/blastoise-page2.png" alt="">
           <h2 class="name-pokemon3">Blastoise</h2>
           <div class="description3">
             <h3>Agua</h3>
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="profile">
-          <img class="ninetales-img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/038.png" alt="">
+          <img class="ninetales-img" src="/assets/img/ninetales-page2.png" alt="">
           <h2 class="name-pokemon4">Ninetales</h2>
           <div class="description4">
             <h3>Fuego</h3>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="profile">
-          <img class="munchlax-img" src="https://images.wikidexcdn.net/mwuploads/wikidex/thumb/8/8e/latest/20160510005053/Munchlax.png/1200px-Munchlax.png" alt="">
+          <img class="munchlax-img" src="/assets/img/munchlax-page2.png" alt="">
           <h2 class="name-pokemon5">Munchlax</h2>
           <div class="description5">
             <h3>Normal</h3>
@@ -133,7 +133,7 @@
       <div class="card 6">
         <div class="profile evolution">
           <img class="caterpie-img"
-            src="https://images.wikidexcdn.net/mwuploads/wikidex/0/05/latest/20170615202446/Caterpie.png"
+            src="/assets/img/caterpie-page2.png"
             alt=""
           />
           <h2 class="name-pokemon6">Caterpie</h2>
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="profile">
-          <img src="https://images.wikidexcdn.net/mwuploads/wikidex/6/6b/latest/20200307022334/Metapod.png" alt="">
+          <img src="/assets/img/metapod-page2.png" alt="">
           <h2 class="name-pokemon6">Metapod</h2>
           <div class="description6">
             <h3>Bicho</h3>
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="profile">
-          <img class="raticate-img" src="https://images.wikidexcdn.net/mwuploads/wikidex/d/d6/latest/20200307022931/Raticate.png" alt="">
+          <img class="raticate-img" src="/assets/img/raticate-page2.png" alt="">
           <h2 class="name-pokemon8">Raticate</h2>
           <div class="description8">
             <h3>Normal</h3>
@@ -295,6 +295,58 @@
             alt=""
           />
           <h2 class="evolution-pokemon16">Persian</h2>
+        </div>
+      </div>
+      <div class="card 17">
+        <div class="profile evolution">
+          <img src="/assets/img/zubat-page2.png" alt="">
+          <h2 class="name-pokemon17">Zubat</h2>
+        </div>
+        <div class="profile">
+          <img class="persian-img"
+            src="/assets/img/golbat-page2.png"
+            alt=""
+          />
+          <h2 class="evolution-pokemon16">Golbat</h2>
+        </div>
+      </div>
+      <div class="card 18">
+        <div class="profile evolution">
+          <img src="/assets/img/diglett-page2.png" alt="">
+          <h2 class="name-pokemon18">Diglett</h2>
+        </div>
+        <div class="profile">
+          <img class="persian-img"
+            src="/assets/img/dugtrio-page2.png"
+            alt=""
+          />
+          <h2 class="evolution-pokemon16">Dugtrio</h2>
+        </div>
+      </div>
+      <div class="card 19">
+        <div class="profile evolution">
+          <img src="/assets/img/psyduck-page2.png" alt="">
+          <h2 class="name-pokemon19">Psyduck</h2>
+        </div>
+        <div class="profile">
+          <img class="persian-img"
+            src="/assets/img/golduck-page2.png"
+            alt=""
+          />
+          <h2 class="evolution-pokemon16">Golduck</h2>
+        </div>
+      </div>
+      <div class="card 20">
+        <div class="profile evolution">
+          <img class="mankey-img" src="/assets/img/mankey-page2.png" alt="">
+          <h2 class="name-pokemon20">Mankey</h2>
+        </div>
+        <div class="profile">
+          <img class="persian-img"
+            src="/assets/img/primeape-page2.png"
+            alt=""
+          />
+          <h2 class="evolution-pokemon16">Primeape</h2>
         </div>
       </div>
       </section>
