--- a/pages/pokeball.html
+++ b/pages/pokeball.html
@@ -319,7 +319,7 @@
                 <h1 class ="TitleCard"> Repeat   Ball</h1>
                 <p>Buy Price: 1000$ </p>
                 <p>Sell Price: 500$ </p>
-                <p>With a Pokémon registered in the Pokédex as captured, its ratio is 3.</p>
+                <p>With a Pokémon registered in the Pokedex as captured, its ratio is 3.</p>
             </div>
         </div> 
         </div>
@@ -482,7 +482,7 @@
                         <div class="flip-card"> <!-- Card  -->
                             <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="../assets/img/featherball.webp"alt="Pluma  Ball  Icon" style="width:200px;height:200px;"><!-- Card Feather  Ball-->
+                                <img src="../assets/img/featherball.webp"alt="FeatherBall  Icon" style="width:200px;height:200px;"><!-- Card Feather  Ball-->
                                 <h1 class ="titlePokemon"> FeatherBall  </h1>
                             </div>
                             <div class="flip-card-back">
@@ -587,7 +587,7 @@
                                 <h1 class ="TitleCard"> Strange        Ball</h1>
                                 <p>It can not be bought. </p>
                                 <p>Its not for sale.</p>
-                                <p>This type of PokeBall is the one shown on Pokemon caught in non-existent PokeBall types in the game.</p>
+                                <p>This type is the one shown on Pokemon caught in non-existent PokeBall types in the game.</p>
                             </div>
                         </div> 
                         </div>
@@ -627,7 +627,7 @@
                         </div>
                         <div class="flip-card-back">
                             <h1 class ="TitleCard"> Unite      Ball</h1>
-                            <p>The Unite Ball is an exclusive Poké Ball from the video game Pokémon UNITE, it is used to capture Æos</p>
+                            <p>The Unite Ball is an exclusive PokeBall from the video game Pokémon UNITE, it is used to capture Æos</p>
                         </div>
                     </div> 
                     </div>
@@ -659,8 +659,42 @@
 
     </main>
     <footer>
+        <div class="footer-content"> <!-- Footer -->
+            <h3>Pokedex & Pokeballs</h3>
+            <!-- About Us  -->
+            <p>Our project consists of being able to add a list of pokemons and pokeballs in the period that more information about the new generations is being added, in order to inform about the changes and new things that are being added.</p>
+            <ul class="socials">
+                <li>
+                    <a href="https://www.linkedin.com/in/diego-lopez-138a89265/" target="_blank"> <!-- Github-->
+                        <img src="/assets/img/linkedin.webp" alt="Linkedin Icon" class="socialImg">
+                    </a>
+                    <p>Diego Lopez</p>
+                </li>
+                <li>
+                    <a href="https://github.com/DiegoLopez0208" target="_blank"> <!-- Linkedin-->
+                        <img src="/assets/img/github.webp" alt="Github Icon" class="socialImg">
+                    </a>
+                    <p>Diego Lopez</p>
+                </li>
+                <li>
+                    <a href="https://github.com/Quintana-MN" target="_blank"><!-- Github-->
+                        <img src="/assets/img/github.webp" alt="Github Icon" class="socialImg">
+                    </a>
+                    <p>Nicolas Quintana</p>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/matias-nicolas-quintana-6620b0243/" target=”_blank”> <!-- Linkedin-->
+                        <img src="/assets/img/linkedin.webp" alt="Linkedin Icon" class="socialImg">
+                    </a>
+                    <p>Nicolas Quintana</p>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>Copyright &copy;2023 Pokedex & Pokeballs. Designed by <span>Diego Lopez - Nicolas Quintana</span></p>  <!-- Copyright -->
+        </div>
     </footer>
-</div>
+    
     <script src="/javascript/script2.js"></script>
 </body>
 </html>
