--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -1,358 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="/assets/img/LogoPokeball(1).ico"/>
     <title>Pokedex</title>
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <img
-        class="pokeball-header"
-        src="/assets/img/pokeball-header.png"
-        alt=""
-      />
-      <img class="open-menu" id="open" src="/assets/img/pngwing.com.png" alt="">
-      <nav class="nav" id="nav">
-        <button class="close-menu" id="close">Close</button>
-        <ul class="nav-list">
-        <li><a href="https://www.google.com"></a>Pokeballs</li>
-        <li><a href="#"></a>Form</li>
-      </ul>
-    </nav>
+        <nav class="navbar">
+            <a href="/index.html" class "nav-branding">
+                <img src="/assets/img/PikachuIcon.webp" alt="Icono" class="navbar-icon">
+            </a>
+        <ul class ="nav-menu">
+            <li class="nav-item">
+                <a href="/pages/pokeball.html" class="nav-link">
+                    <img src="/assets/img/pokeballicon.webp" alt="Pokeball Icon Navbar" class="navbar-icon2">
+                <h3>Pokeballs</h3></a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link"> <img src="/assets/img/FormularyIcon.webp" alt="Formulary Icon Navbar" class="navbar-icon2">
+                    <h3>Forms</h3></a>
+            </li>
+        </ul>
+            <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            </div>
+        </nav>
     </header>
     <main>
-      <section class="cards">
-        <div class="card 1" id="style1">
+    <section class="cards">
+        <div class="card 1">
         <div class="profile evolution">
-          <img class="pikachu-img"
-            src="/assets/img/pikachu-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon1">Pikachu</h2>
-          <div class="description1">
-            <h3>Eléctrico</h3>
-            <h3 class="number-pokemon1">N.° 0025</h3>
-          </div>
+        <img class="pikachu-img"
+            src="/assets/img/pikachu-page2.webp
+            "
+            alt="Pokemon Pikachu Image"
+        />
+        <h2 class="name-pokemon1">Pikachu</h2>
+        
         </div>
         <div class="profile">
-          <img class="raichu-img" src="/assets/img/raichu-page2.png" alt="">
-          <h2 class="name-pokemon1">Raichu</h2>
-          <div class="description1">
-            <h3>Eléctrico</h3>
-            <h3 class="number-pokemon1">N.° 0026</h3>
-          </div>
+        <img class="raichu-img" src="/assets/img/raichu-page2.webp" alt=" Pokemon Raichu Image">
+        <h2 class="name-pokemon1">Raichu</h2>
+        
         </div>
-      </div>
-      <div class="card 2">
+    </div>
+    <div class="card 2">
         <div class="profile evolution">
-          <img class="charmander-img"
-            src="/assets/img/charmander-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon2">Charmander</h2>
-          <div class="description2">
-            <h3>Fuego</h3>
-            <h3 class="number-pokemon1">N.° 0004</h3>
-          </div>
+        <img class="charmander-img"
+            src="/assets/img/charmander-page2.webp"
+            alt="Pokemon Charmander Image"
+        />
+        <h2 class="name-pokemon2">Charmander</h2>
         </div>
         <div class="profile">
-          <img class="charizard-img" src="/assets/img/charizard-page2.png" alt="">
-          <h2 class="name-pokemon2">Charizard</h2>
-          <div class="description2">
-            <h3>Fuego</h3>
-            <h3 class="number-pokemon1">N.° 0006</h3>
-          </div>
+        <img class="charizard-img" src="/assets/img/charizard-page2.webp" alt="Pokemon Charizard Image">
+        <h2 class="name-pokemon2">Charizard</h2>
         </div>
-      </div>
-      <div class="card 3">
+    </div>
+    <div class="card 3">
         <div class="profile evolution">
-          <img class="squirtle-img"
-            src="/assets/img/squirtle-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon3">Squirtle</h2>
-          <div class="description3">
-            <h3>Agua</h3>
-            <h3 class="number-pokemon1">N.° 0007</h3>
-          </div>
+        <img class="squirtle-img"
+            src="/assets/img/squirtle-page2.webp"
+            alt="Pokemon Squirtle Image"
+        />
+        <h2 class="name-pokemon3">Squirtle</h2>
         </div>
         <div class="profile">
-          <img class="blastoise-img" src="/assets/img/blastoise-page2.png" alt="">
-          <h2 class="name-pokemon3">Blastoise</h2>
-          <div class="description3">
-            <h3>Agua</h3>
-            <h3 class="number-pokemon1">N.° 0009</h3>
-          </div>
+        <img class="blastoise-img" src="/assets/img/Blastoise.webp" alt="Pokemon Blastoise Image">
+        <h2 class="name-pokemon3">Blastoise</h2>
         </div>
-      </div>
-      <div class="card 4">
+    </div>
+    <div class="card 4">
         <div class="profile evolution">
-          <img class="vulpix-img"
-            src="/assets/img/vulpix-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon4">Vulpix</h2>
-          <div class="description4">
-            <h3>Fuego</h3>
-            <h3 class="number-pokemon1">N.° 0037</h3>
-          </div>
+        <img class="vulpix-img"
+            src="/assets/img/vulpix-page2.webp"
+            alt="Pokemon Vulpix Image"
+        />
+        <h2 class="name-pokemon4">Vulpix</h2>
         </div>
         <div class="profile">
-          <img class="ninetales-img" src="/assets/img/ninetales-page2.png" alt="">
-          <h2 class="name-pokemon4">Ninetales</h2>
-          <div class="description4">
-            <h3>Fuego</h3>
-            <h3 class="number-pokemon1">N.° 0038</h3>
-          </div>
+        <img class="ninetales-img" src="/assets/img/Ninetales.webp" alt="Pokemon Ninetales Image">
+        <h2 class="name-pokemon4">Ninetales</h2>
         </div>
-      </div>
-      <div class="card 5">
+    </div>
+    <div class="card 5">
         <div class="profile evolution">
-          <img class="snorlax-img"
-            src="/assets/img/snorlax-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon5">Snorlax</h2>
-          <div class="description5">
-            <h3>Normal</h3>
-            <h3 class="number-pokemon1">N.° 0143</h3>
-          </div>
+        <img class="snorlax-img"
+            src="/assets/img/snorlax-page2.webp"
+            alt="Pokemon Snorlax Image"
+        />
+        <h2 class="name-pokemon5">Snorlax</h2>
         </div>
         <div class="profile">
-          <img class="munchlax-img" src="/assets/img/munchlax-page2.png" alt="">
-          <h2 class="name-pokemon5">Munchlax</h2>
-          <div class="description5">
-            <h3>Normal</h3>
-            <h3 class="number-pokemon1">N.° 0446</h3>
-          </div>
+        <img class="munchlax-img" src="/assets/img/Munchlax.webp" alt="Pokemon Munchlax Image">
+        <h2 class="name-pokemon5">Munchlax</h2>
         </div>
-      </div>
-      <div class="card 6">
+    </div>
+    <div class="card 6">
         <div class="profile evolution">
-          <img class="caterpie-img"
-            src="/assets/img/caterpie-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon6">Caterpie</h2>
-          <div class="description6">
-            <h3>Bicho</h3>
-            <h3 class="number-pokemon1">N.° 0010</h3>
-          </div>
+        <img class="caterpie-img"
+            src="/assets/img/Caterpie.webp"
+            alt="Pokemon Caterpie Image"
+        />
+        <h2 class="name-pokemon6">Caterpie</h2>
         </div>
         <div class="profile">
-          <img src="/assets/img/metapod-page2.png" alt="">
-          <h2 class="name-pokemon6">Metapod</h2>
-          <div class="description6">
-            <h3>Bicho</h3>
-            <h3 class="number-pokemon1">N.° 0011</h3>
-          </div>
+        <img src="/assets/img/Metapod.webp" alt="Image Metapod Pokemon">
+        <h2 class="name-pokemon6">Metapod</h2>
         </div>
-      </div>
-      <div class="card 7">
+    </div>
+    <div class="card 7">
         <div class="profile evolution">
-          <img class="haunter-img"
-            src="/assets/img/haunter-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon7">Haunter</h2>
-          <div class="description7">
-            <h3>Fantasma</h3>
-            <h3 class="number-pokemon1">N.° 0093</h3>
-          </div>
+        <img class="haunter-img"
+            src="/assets/img/Haunter.gif"
+            alt="Image Haunter Gif Pokemon"
+        />
+        <h2 class="name-pokemon7">Haunter</h2>
         </div>
         <div class="profile">
-          <img class="gengar-img" src="/assets/img/gengar-page2.png" alt="">
-          <h2 class="name-pokemon7">Gengar</h2>
-          <div class="description7">
-            <h3>Fantasma</h3>
-            <h3 class="number-pokemon1">N.° 0094</h3>
-          </div>
+        <img class="gengar-img" src="/assets/img/gengar-page2.webp" alt="Image Gengar Gif Pokemon">
+        <h2 class="name-pokemon7">Gengar</h2>
         </div>
-      </div>
-      <div class="card 8">
+    </div>
+    <div class="card 8">
         <div class="profile evolution">
-          <img class="rattata-img"
-            src="/assets/img/rattata-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon8">Rattata</h2>
-          <div class="description8">
-            <h3>Normal</h3>
-            <h3 class="number-pokemon1">N.° 0019</h3>
-          </div>
+        <img class="rattata-img"
+            src="/assets/img/rattata-page2.webp"
+            alt="Image Ratata Pokemon"
+        />
+        <h2 class="name-pokemon8">Rattata</h2>
         </div>
         <div class="profile">
-          <img class="raticate-img" src="/assets/img/raticate-page2.png" alt="">
-          <h2 class="name-pokemon8">Raticate</h2>
-          <div class="description8">
-            <h3>Normal</h3>
-            <h3 class="number-pokemon1">N.° 0020</h3>
-          </div>
+        <img class="raticate-img" src="/assets/img/Raticate.webp" alt="Image Raticate Pokemon">
+        <h2 class="name-pokemon8">Raticate</h2>
         </div>
-      </div>
-      <div class="card 9">
+    </div>
+    <div class="card 9">
         <div class="profile evolution">
-          <img class="clefairy-img" src="/assets/img/klefairy-page2.png" alt="">
-          <h2 class="name-pokemon9">Clefairy</h2>
+        <img class="clefairy-img" src="/assets/img/klefairy-page2.webp" alt="Image Clefairy Pokemon">
+        <h2 class="name-pokemon9">Clefairy</h2>
         </div>
         <div class="profile">
-          <img class="clefable-img"
-            src="/assets/img/clefable-page2.png"
-            alt=""
-          />
-          <h2 class="name-pokemon9">Clefable</h2>
+        <img class="clefable-img"
+            src="/assets/img/clefable-page2.webp"
+            alt="Image Clefable Pokemon"
+        />
+        <h2 class="name-pokemon9">Clefable</h2>
         </div>
-      </div>
-      <div class="card 10">
+    </div>
+    <div class="card 10">
         <div class="profile evolution">
-          <img class="pidgey-img" src="/assets/img/pidgey-page2.png" alt="">
-          <h2 class="name-pokemon10">Pidgey</h2>
+        <img class="pidgey-img" src="/assets/img/pidgey-page2.webp" alt="Image Pidgey Pokemon">
+        <h2 class="name-pokemon10">Pidgey</h2>
         </div>
         <div class="profile">
-          <img class="pidgeot-img"
-            src="/assets/img/pidgeot-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon10">Pidgeot</h2>
+        <img class="pidgeot-img"
+            src="/assets/img/pidgeot-page2.webp"
+            alt="Image Pidgeot Pokemon"
+        />
+        <h2 class="evolution-pokemon10">Pidgeot</h2>
         </div>
-      </div>
-      <div class="card 11">
+    </div>
+    <div class="card 11">
         <div class="profile evolution">
-          <img class="jigglypuff-img" src="/assets/img/jigglypuff-page2.png" alt="">
-          <h2 class="name-pokemon11">Jigglypuff</h2>
+        <img class="jigglypuff-img" src="/assets/img/jigglypuff-page2.webp" alt="Image Jigglypuff Pokemon">
+        <h2 class="name-pokemon11">Jigglypuff</h2>
         </div>
         <div class="profile">
-          <img class="wigglytuff-img"
-            src="/assets/img/wigglytuff-page2-png.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon11">Wigglytuff</h2>
+        <img class="wigglytuff-img"
+            src="/assets/img/wigglytuff-page2-png.webp"
+            alt="Image Wigglytuff Pokemon"
+        />
+        <h2 class="evolution-pokemon11">Wigglytuff</h2>
         </div>
-      </div>
-      <div class="card 12">
+    </div>
+    <div class="card 12">
         <div class="profile evolution">
-          <img src="/assets/img/growlithe-page2.png" alt="">
-          <h2 class="name-pokemon12">Growlithe</h2>
+        <img src="/assets/img/growlithe-page2.webp" alt="Image Growlithe Pokemon">
+        <h2 class="name-pokemon12">Growlithe</h2>
         </div>
         <div class="profile">
-          <img class="arcanine-img"
-            src="/assets/img/arcanine-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon12">Arcanine</h2>
+        <img class="arcanine-img"
+            src="/assets/img/arcanine-page2.webp"
+            alt="Image Arcanine Pokemon"
+        />
+        <h2 class="evolution-pokemon12">Arcanine</h2>
         </div>
-      </div>
-      <div class="card 13">
-        <div class="profile evolution">
-          <img class="spearow-img" src="/assets/img/spearow-page2.png" alt="">
-          <h2 class="name-pokemon13">Spearow</h2>
-        </div>
-        <div class="profile">
-          <img class="fearow-img"
-            src="/assets/img/fearow-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon13">Fearow</h2>
-        </div>
-      </div>
-      <div class="card 14">
-        <div class="profile evolution">
-          <img src="/assets/img/ekans-page2.png" alt="">
-          <h2 class="name-pokemon14">Ekans</h2>
-        </div>
-        <div class="profile">
-          <img class="arbok-img"
-            src="/assets/img/arbok-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon14">Arbok</h2>
-        </div>
-      </div>
-      <div class="card 15">
-        <div class="profile evolution">
-          <img src="/assets/img/sandshrew-page2.png" alt="">
-          <h2 class="name-pokemon15">Sandshrew</h2>
-        </div>
-        <div class="profile">
-          <img class="sandslash-img"
-            src="/assets/img/sandslash-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon15">Sandslash</h2>
-        </div>
-      </div>
-      <div class="card 16">
-        <div class="profile evolution">
-          <img src="/assets/img/meowth-page2.png" alt="">
-          <h2 class="name-pokemon16">Meowth</h2>
-        </div>
-        <div class="profile">
-          <img class="persian-img"
-            src="/assets/img/persian-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon16">Persian</h2>
-        </div>
-      </div>
-      <div class="card 17">
-        <div class="profile evolution">
-          <img src="/assets/img/zubat-page2.png" alt="">
-          <h2 class="name-pokemon17">Zubat</h2>
-        </div>
-        <div class="profile">
-          <img class="persian-img"
-            src="/assets/img/golbat-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon16">Golbat</h2>
-        </div>
-      </div>
-      <div class="card 18">
-        <div class="profile evolution">
-          <img src="/assets/img/diglett-page2.png" alt="">
-          <h2 class="name-pokemon18">Diglett</h2>
-        </div>
-        <div class="profile">
-          <img class="persian-img"
-            src="/assets/img/dugtrio-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon16">Dugtrio</h2>
-        </div>
-      </div>
-      <div class="card 19">
-        <div class="profile evolution">
-          <img src="/assets/img/psyduck-page2.png" alt="">
-          <h2 class="name-pokemon19">Psyduck</h2>
-        </div>
-        <div class="profile">
-          <img class="persian-img"
-            src="/assets/img/golduck-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon16">Golduck</h2>
-        </div>
-      </div>
-      <div class="card 20">
-        <div class="profile evolution">
-          <img class="mankey-img" src="/assets/img/mankey-page2.png" alt="">
-          <h2 class="name-pokemon20">Mankey</h2>
-        </div>
-        <div class="profile">
-          <img class="persian-img"
-            src="/assets/img/primeape-page2.png"
-            alt=""
-          />
-          <h2 class="evolution-pokemon16">Primeape</h2>
-        </div>
-      </div>
-      </section>
+    </div>
+    </section>
     </main>
     <footer>
+        <div class="footer-content"> <!-- Footer -->
+            <h3>Pokedex & Pokeballs</h3>
+            <!-- About Us  -->
+            <p>Our project consists of being able to add a list of pokemons and pokeballs in the period that more information about the new generations is being added, in order to inform about the changes and new things that are being added.</p>
+            <ul class="socials">
+                <li>
+                    <a href="https://www.linkedin.com/in/diego-lopez-138a89265/" target="_blank"> <!-- Github-->
+                        <img src="/assets/img/linkedin.webp" alt="Linkedin Icon" class="socialImg">
+                    </a>
+                    <p>Diego Lopez</p>
+                </li>
+                <li>
+                    <a href="https://github.com/DiegoLopez0208" target="_blank"> <!-- Linkedin-->
+                        <img src="/assets/img/github.webp" alt="Github Icon" class="socialImg">
+                    </a>
+                    <p>Diego Lopez</p>
+                </li>
+                <li>
+                    <a href="https://github.com/Quintana-MN" target="_blank"><!-- Github-->
+                        <img src="/assets/img/github.webp" alt="Github Icon" class="socialImg">
+                    </a>
+                    <p>Nicolas Quintana</p>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/matias-nicolas-quintana-6620b0243/" target=”_blank”> <!-- Linkedin-->
+                        <img src="/assets/img/linkedin.webp" alt="Linkedin Icon" class="socialImg">
+                    </a>
+                    <p>Nicolas Quintana</p>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>Copyright &copy;2023 Pokedex & Pokeballs. Designed by <span>Diego Lopez - Nicolas Quintana</span></p>  <!-- Copyright -->
+        </div>
     </footer>
-    <script src="/javascript/script.js"></script>
-  </body>
+    <script src="../javascript/script2.js"></script>
+</body>
 </html>
