--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <a href="/index.html" class "nav-branding">
-                <img src="/assets/img/PikachuIcon.webp" alt="Icono" class="navbar-icon">
+                <img src="/assets/img/PikachuIcon.webp" alt="Pikachu Logo Icon" class="navbar-icon">
             </a>
         <ul class ="nav-menu">
             <li class="nav-item">
@@ -205,31 +205,26 @@
                     <a href="https://www.linkedin.com/in/diego-lopez-138a89265/" target="_blank"> <!-- Github-->
                         <img src="/assets/img/linkedin.webp" alt="Linkedin Icon" class="socialImg">
                     </a>
-                    <p>Diego Lopez</p>
-                </li>
-                <li>
                     <a href="https://github.com/DiegoLopez0208" target="_blank"> <!-- Linkedin-->
                         <img src="/assets/img/github.webp" alt="Github Icon" class="socialImg">
                     </a>
-                    <p>Diego Lopez</p>
+                    <p class="centered-text">Diego Lopez</p>
                 </li>
                 <li>
                     <a href="https://github.com/Quintana-MN" target="_blank"><!-- Github-->
                         <img src="/assets/img/github.webp" alt="Github Icon" class="socialImg">
                     </a>
-                    <p>Nicolas Quintana</p>
-                </li>
-                <li>
                     <a href="https://www.linkedin.com/in/matias-nicolas-quintana-6620b0243/" target=”_blank”> <!-- Linkedin-->
                         <img src="/assets/img/linkedin.webp" alt="Linkedin Icon" class="socialImg">
                     </a>
-                    <p>Nicolas Quintana</p>
+                    <p class="centered-text">Nicolas Quintana</p>
                 </li>
             </ul>
+            <div class="footer-bottom">
+                <p>Copyright &copy;2023 Pokedex & Pokeballs. Designed by <span>Diego Lopez - Nicolas Quintana</span></p>  <!-- Copyright -->
+            </div>
         </div>
-        <div class="footer-bottom">
-            <p>Copyright &copy;2023 Pokedex & Pokeballs. Designed by <span>Diego Lopez - Nicolas Quintana</span></p>  <!-- Copyright -->
-        </div>
+    
     </footer>
     <script src="../javascript/script2.js"></script>
 </body>
