--- a/pages/pokeball.html
+++ b/pages/pokeball.html
@@ -661,7 +661,11 @@
     <footer>
         <div class="footer-content"> <!-- Footer -->
     
-            <h3>Pokedex & Pokeballs</h3>
+            <h3>
+                <img src="/assets/img/PikachuIcon.webp" alt="Pikachu Logo Icon" class="navbar-icon">
+                Pokedex & Pokeballs
+                <img src="/assets/img/LogoPokeball(1).ico" alt="Pikachu Logo Icon" class="navbar-icon">
+            </h3>
             <!-- About Us  -->
             <p>Our project consists of being able to add a list of pokemons and pokeballs in the period that more information about the new generations is being added, in order to inform about the changes and new things that are being added.</p>
             <ul class="socials">
