--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -193,6 +193,111 @@
         <h2 class="evolution-pokemon12">Arcanine</h2>
         </div>
     </div>
+    <div class="card 13">
+      <div class="profile evolution">
+      <img src="" alt="Image Venonat Pokemon">
+      <h2 class="name-pokemon13">Venonat</h2>
+      </div>
+      <div class="profile">
+      <img class="venomoth-img"
+          src=""
+          alt="Image Venomoth Pokemon"
+      />
+      <h2 class="evolution-pokemon13">Venomoth</h2>
+      </div>
+      </div>
+      <div class="card 14">
+        <div class="profile evolution">
+        <img src="" alt="Image Ponyta Pokemon">
+        <h2 class="name-pokemon14">Ponyta</h2>
+        </div>
+        <div class="profile">
+        <img
+            src=""
+            alt="Image Rapidash Pokemon"
+        />
+        <h2 class="evolution-pokemon14">Rapidash</h2>
+        </div>
+    </div>
+    <div class="card 15">
+        <div class="profile evolution">
+        <img src="" alt="Image Cubone Pokemon">
+        <h2 class="name-pokemon15">Cubone</h2>
+        </div>
+        <div class="profile">
+        <img
+            src=""
+            alt="Image Marowak Pokemon"
+        />
+        <h2 class="evolution-pokemon12">Marowak</h2>
+        </div>
+    </div>
+    <div class="card 16">
+        <div class="profile evolution">
+        <img src="" alt="Image Koffing Pokemon">
+        <h2 class="name-pokemon16">Koffing</h2>
+        </div>
+        <div class="profile">
+        <img
+            src=""
+            alt="Image Weezing Pokemon"
+        />
+        <h2 class="evolution-pokemon16">Weezing</h2>
+        </div>
+    </div>
+    <div class="card 17">
+        <div class="profile evolution">
+        <img src="" alt="Image Magikarp Pokemon">
+        <h2 class="name-pokemon17">Magikarp</h2>
+        </div>
+        <div class="profile">
+        <img
+            src=""
+            alt="Image Gyarados Pokemon"
+        />
+        <h2 class="evolution-pokemon16">Gyarados</h2>
+        </div>
+    </div>
+    <div class="card 18">
+        <div class="profile evolution">
+        <img src="" alt="Image Sentret Pokemon">
+        <h2 class="name-pokemon18">Sentret</h2>
+        </div>
+        <div class="profile">
+        <img
+            src=""
+            alt="Image Furret Pokemon"
+        />
+        <h2 class="evolution-pokemon18">Furret</h2>
+        </div>
+    </div>
+    <div class="card 19">
+        <div class="profile evolution">
+        <img src="" alt="Image Onix Pokemon">
+        <h2 class="name-pokemon19">Onix</h2>
+        </div>
+        <div class="profile">
+        <img
+            src=""
+            alt="Image Steelix Pokemon"
+        />
+        <h2 class="evolution-pokemon19">Steelix</h2>
+        </div>
+    </div>
+    <div class="card 20">
+        <div class="profile evolution">
+        <img src="" alt="Image Voltorb Pokemon">
+        <h2 class="name-pokemon20">Voltorb</h2>
+        </div>
+        <div class="profile">
+        <img
+            src=""
+            alt="Image Electrode Pokemon"
+        />
+        <h2 class="evolution-pokemon20">Electrode</h2>
+        </div>
+    </div>
+      
     </section>
     </main>
     <footer>
