LocalStorage Fixed / Added New Pokemons (Format WEBP) / Removed All Useles Images

--- a/pages/pokeball.html
+++ b/pages/pokeball.html
@@ -20,7 +20,7 @@
                 <h3>Pokedex</h3></a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link"> <img src="/assets/img/FormularyIcon.webp" alt="Formulary Icon Navbar" class="navbar-icon2">
+            <a href="/pages/formulary.html" class="nav-link"> <img src="/assets/img/FormularyIcon.webp" alt="Formulary Icon Navbar" class="navbar-icon2">
                 <h3>Forms</h3></a>
         </li>
     </ul>
