--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
         <div class="rectangle"></div>      
     </section>
 </main>
-    <script src="./javascript/script.js"></script>
+    <script src="./javascript/splashscreen.js"></script>
 </body>
 </html>
