--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -21,7 +21,7 @@
                 <h3>Pokeballs</h3></a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"> <img src="/assets/img/FormularyIcon.webp" alt="Formulary Icon Navbar" class="navbar-icon2">
+                <a href="/pages/formulary.html" class="nav-link"> <img src="/assets/img/FormularyIcon.webp" alt="Formulary Icon Navbar" class="navbar-icon2">
                     <h3>Forms</h3></a>
             </li>
         </ul>
@@ -118,7 +118,7 @@
     <div class="card 7">
         <div class="profile evolution">
         <img class="haunter-img"
-            src="/assets/img/Haunter.gif"
+            src="/assets/img/Haunter.webp"
             alt="Image Haunter Gif Pokemon"
         />
         <h2 class="name-pokemon7">Haunter</h2>
@@ -191,6 +191,110 @@
             alt="Image Arcanine Pokemon"
         />
         <h2 class="evolution-pokemon12">Arcanine</h2>
+        </div>
+    </div>
+    <div class="card 13">
+        <div class="profile evolution">
+        <img src="/assets/img/venonat-page2.webp" alt="Image Venonat Pokemon">
+        <h2 class="name-pokemon13">Venonat</h2>
+        </div>
+        <div class="profile">
+        <img class="venomoth-img"
+            src="/assets/img/Venomoth_1.webp"
+            alt="Image Venomoth Pokemon"
+        />
+        <h2 class="evolution-pokemon13">Venomoth</h2>
+        </div>
+        </div>
+        <div class="card 14">
+        <div class="profile evolution">
+        <img src="/assets/img/ponyta.webp" alt="Image Ponyta Pokemon">
+        <h2 class="name-pokemon14">Ponyta</h2>
+        </div>
+        <div class="profile">
+        <img
+            src="/assets/img/rapidash.webp"
+            alt="Image Rapidash Pokemon"
+        />
+        <h2 class="evolution-pokemon14">Rapidash</h2>
+        </div>
+    </div>
+    <div class="card 15">
+        <div class="profile evolution">
+        <img src="/assets/img/cubone.webp" alt="Image Cubone Pokemon">
+        <h2 class="name-pokemon15">Cubone</h2>
+        </div>
+        <div class="profile">
+        <img
+            src="/assets/img/marowak.webp"
+            alt="Image Marowak Pokemon"
+        />
+        <h2 class="evolution-pokemon12">Marowak</h2>
+        </div>
+    </div>
+    <div class="card 16">
+        <div class="profile evolution">
+        <img src="/assets/img/koffing.webp" alt="Image Koffing Pokemon">
+        <h2 class="name-pokemon16">Koffing</h2>
+        </div>
+        <div class="profile">
+        <img
+            src="/assets/img/weezing.webp"
+            alt="Image Weezing Pokemon"
+        />
+        <h2 class="evolution-pokemon16">Weezing</h2>
+        </div>
+    </div>
+    <div class="card 17">
+        <div class="profile evolution">
+        <img src="/assets/img/magikarp.webp" alt="Image Magikarp Pokemon">
+        <h2 class="name-pokemon17">Magikarp</h2>
+        </div>
+        <div class="profile">
+        <img
+            src="/assets/img/gyarados.webp"
+            alt="Image Gyarados Pokemon"
+        />
+        <h2 class="evolution-pokemon16">Gyarados</h2>
+        </div>
+    </div>
+    <div class="card 18">
+        <div class="profile evolution">
+        <img src="/assets/img/sentret.webp" alt="Image Sentret Pokemon">
+        <h2 class="name-pokemon18">Sentret</h2>
+        </div>
+        <div class="profile">
+        <img
+            src="/assets/img/furret.webp"
+            alt="Image Furret Pokemon"
+        />
+        <h2 class="evolution-pokemon18">Furret</h2>
+        </div>
+    </div>
+    <div class="card 19">
+        <div class="profile evolution">
+        <img src="/assets/img/onix.webp" alt="Image Onix Pokemon">
+        <h2 class="name-pokemon19">Onix</h2>
+        </div>
+        <div class="profile">
+        <img
+            src="/assets/img/steelix.webp"
+            alt="Image Steelix Pokemon"
+        />
+        <h2 class="evolution-pokemon19">Steelix</h2>
+        </div>
+    </div>
+    <div class="card 20">
+        <div class="profile evolution">
+        <img src="/assets/img/voltorb.webp" alt="Image Voltorb Pokemon">
+        <h2 class="name-pokemon20">Voltorb</h2>
+        </div>
+        <div class="profile">
+        <img
+            src="/assets/img/electrode.webp"
+            alt="Image Electrode Pokemon"
+        />
+        <h2 class="evolution-pokemon20">Electrode</h2>
         </div>
     </div>
     </section>
