--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class ="pokeball-button"></div>
         <div class= "pokeball-button2"></div>
     </button>
-    <button class ="hiddenButton"></button>
+   <!-- <button class ="hiddenButton"></button>-->
     <button class="pikachu-button">
         <section class="pikachu-face">
         <div class="eye-right"></div>
@@ -30,7 +30,7 @@
         </section>
     </button>
     <audio autoplay>
-        <source src="./assets/song/PokemonRubyMainTheme.mp3" type="audio/mp3" controls volume="1">
+        <source src="./assets/song/PokemonRubyMainTheme.mp3" type="audio/mp3" controls volume="2">
         Tu navegador no soporta la reproducción de audio.
     </audio>
     <section class="animation-container">  <!-- Animation Container  -->
